fix mobile animation overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -215,7 +215,7 @@ body {
 
   @keyframes moveResumeHeader {
     from {transform: translate(0px, 0px);}
-    to {transform: translate(50px, 150px);}
+    to {transform: translate(0px, 150px);}
   }
 }
 
